[gd_scene load_steps=6 format=2]

[ext_resource path="res://circle.png" type="Texture" id=1]
[ext_resource path="res://Motions.gd" type="Script" id=2]
[ext_resource path="res://Line2D.gd" type="Script" id=3]
[ext_resource path="res://bg.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.94902, 0.94902, 0.94902, 0.392157 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="Motions" type="Node2D"]
position = Vector2( 248, 184 )
script = ExtResource( 2 )
trans_type = 0

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 152, 8 )
points = PoolVector2Array( 0, 0, 0, 128 )
width = 2.0
default_color = Color( 0.737255, 0.737255, 0.737255, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="c" type="Sprite" parent="Line2D"]
modulate = Color( 1, 0.00392157, 0.00392157, 1 )
scale = Vector2( 0.02, 0.02 )
z_index = 1
texture = ExtResource( 1 )

[node name="c2" type="Sprite" parent="."]
self_modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 152, 8 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="circle2" type="Sprite" parent="."]
modulate = Color( 0.74902, 0.74902, 0.74902, 1 )
position = Vector2( 152, 136 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="bg" type="Sprite" parent="."]
position = Vector2( 72, 72 )
scale = Vector2( 0.235294, 0.235294 )
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 136.0
margin_right = 136.0
margin_bottom = 264.0
rect_min_size = Vector2( 128, 128 )
rect_scale = Vector2( 1, -1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle3" type="Sprite" parent="Panel"]
modulate = Color( 0, 0.662745, 1, 1 )
position = Vector2( 128, 128 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="circle4" type="Sprite" parent="Panel"]
modulate = Color( 0, 0.65098, 0.984314, 1 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="c2x" type="Node2D" parent="Panel"]

[node name="c2y" type="Sprite" parent="Panel/c2x"]
modulate = Color( 0.984314, 0.00392157, 0.00392157, 1 )
scale = Vector2( 0.02, 0.02 )
z_index = 1
texture = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="Panel"]
width = 2.0
default_color = Color( 0, 0.65098, 0.984314, 1 )
sharp_limit = 0.1
antialiased = true
script = ExtResource( 3 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
